java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testBug113380b-hints.pass
Add throws clause for java.lang.IllegalAccessException
Surround with try-catch
